# exergy-dashboard-deploy

./: .dockerignore  .gitignore  DOCUMENTATION.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
docs/: DEPLOYMENT_PLAN.md  DOCUMENTATION_PLAN.md
docs/deployment_sections/: 01_infrastructure.md  02_deployment_strategy.md  03_proxy_and_security.md  04_load_balancing_and_scaling.md  05_docker_and_containerization.md  06_ci_cd_and_github_actions.md  07_monitoring_and_logging.md  08_deployment_faq_and_troubleshooting.md
docs/sections/: 01_project_overview.md  02_tech_stack.md  03_architecture_and_patterns.md  04_folder_structure.md  05_core_modules.md  06_install_and_run.md  07_usage_guide.md  08_extension_and_customization.md  09_examples.md  10_minimal_custom_system.md  11_cooling_system_analysis.md
examples/: cooling_system.py  custom_system.py  heating_system.py
notebooks/: altair-waterfall.ipynb  chart.html
src/exergy_dashboard/: chart.py  evaluation.py  system.py  visualization.py
systems/: cooling_system.py  custom_system.py  heating_system.py  hot_water_system.py
tests/: __init__.py  test_evaluation_registry.py  test_visualization_registry.py
