[project]
name = "exergy-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sangwon91", email = "lsw91.main@gmail.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "altair>=5.5",
    "dartwork-mpl",
    "enex-analysis",
    "pylatexenc>=2.10",
    "rich>=14.0.0",
    "streamlit==1.43",
    "vl-convert-python>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "anywidget>=0.9.13",
    "notebook>=7.3.1",
]

[tool.uv.sources]
dartwork-mpl = { git = "https://github.com/dartwork-repo/dartwork-mpl.git"}
enex-analysis = { git = "https://github.com/BET-lab/enex_analysis_engine.git" }
